<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorBackground"
    tools:context="com.example.android.freetime.activities.RegisterActivity">

    <FrameLayout
        android:id="@+id/register_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        android:background="@color/colorOverlay">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
        </ProgressBar>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="48dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/registerTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title_activity_register"
                android:textSize="30sp"
                android:textColor="@color/colorWhite"/>

            <!-- Email form -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColorHint="@color/colorWhite"
                    android:textColor="@color/colorWhite"/>
                    <!--android:background="@color/clear"-->
            </android.support.design.widget.TextInputLayout>

            <!--First name form -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_first_name"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:textColorHint="@color/colorWhite"
                    android:textColor="@color/colorWhite"/>
                    <!--android:background="@color/clear"-->
            </android.support.design.widget.TextInputLayout>

            <!--Last name form -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_last_name"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:textColorHint="@color/colorWhite"
                    android:textColor="@color/colorWhite"/>
                    <!--android:background="@color/clear"-->
            </android.support.design.widget.TextInputLayout>

            <!--Password form -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password_register"
                    android:maxLines="1"
                    android:textColorHint="@color/colorWhite"
                    android:textColor="@color/colorWhite"
                    android:inputType="textPassword"/>
                <!--android:background="@color/clear"-->
            </android.support.design.widget.TextInputLayout>

            <!--Retype Password form -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText
                    android:id="@+id/retypePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password_retype"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="@color/colorWhite"
                    android:textColor="@color/colorWhite"/>
                    <!--android:background="@color/clear"-->
            </android.support.design.widget.TextInputLayout>

            <Button
                android:background="@color/colorTitle"
                android:id="@+id/register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:layout_marginBottom="24dp"/>

            <TextView android:id="@+id/link_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_existing_member"
                android:gravity="center"
                android:textSize="16sp"
                android:clickable="true"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
