<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorBackground"
    tools:context="com.example.android.freetime.activities.LoginActivity">

    <FrameLayout
        android:id="@+id/login_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        android:background="@color/colorOverlay">

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"></ProgressBar>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/login_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="48dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Just In Time"
            android:fontFamily="cursive"
            android:textSize="50dp"
            android:textColor="@color/colorWhite"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:background="@color/clear"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:background="@color/clear"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:background="@color/colorTitle"
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_marginBottom="24dp" />

        <TextView android:id="@+id/link_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_register"
            android:textSize="16dip"
            android:paddingBottom="8dp"
            android:layout_gravity= "center"/>

         <TextView android:id="@+id/link_forgotPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Forgot Your Password?"
             android:textSize="16dip"
             android:visibility="gone"
             android:layout_gravity="center"/>
    </LinearLayout>
</RelativeLayout>