<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.freetime.activities.ForgotPassActivity">

    <include
        layout="@layout/content_forgot_pass"
        android:layout_height="0dp"
        android:layout_width="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        android:id="@+id/include" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_dialog_email"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp" />

    <AutoCompleteTextView
        android:id="@+id/emailAutoComplete"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:text="AutoCompleteTextView"
        tools:text="@string/text_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="277dp"
        app:layout_constraintBottom_toTopOf="@+id/include" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="84dp"
        android:layout_height="39dp"
        android:background="@color/colorPrimary"
        android:text="Button"
        android:textColor="@color/colorWhite"
        tools:text="@string/btn_next"
        android:layout_marginRight="42dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/emailAutoComplete" />

    <TextView
        android:id="@+id/enterEmailText"
        android:layout_width="300dp"
        android:layout_height="21dp"
        android:text="TextView"
        tools:text="@string/text_enter_email_instruction"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/emailAutoComplete"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
